--- a/AuctionManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -95,7 +95,7 @@
                             </li>
                             <li class="nav-item">
                                 <a asp-action="Index" asp-controller="Home" class="nav-link">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                                    <i class="nav-icon fas fa-globe"></i>
                                     <p>
                                         Go to Website
                                     </p>
@@ -122,6 +122,14 @@
                                     <i class="nav-icon fas fa-truck"></i>
                                     <p>
                                         Manage Vehicles
+                                    </p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-action="Logout" asp-controller="Account" class="nav-link">
+                                    <i class="nav-icon fas fa-sign-out-alt"></i>
+                                    <p>
+                                        Logout
                                     </p>
                                 </a>
                             </li>
