private/dealer update.

--- a/AuctionManagementSystem/Views/Admin/Details.cshtml
+++ b/AuctionManagementSystem/Views/Admin/Details.cshtml
@@ -104,7 +104,7 @@
                     <div class="text-muted">
                         <p class="text-sm">
                             Dealer/Private Party
-                            <b class="d-block">@Model.DealerName</b>
+                            <b class="d-block"></b>
                         </p>
                         <p class="text-sm">
                             <i class="fas fa-map-marker mr-1"></i> Car Location
